--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>Hello React</title>
     <link rel="stylesheet" href="stylesheets/base.css" />
     <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
   </head>
   <body>
     <div id="content"></div>
